# AI_201

./: class2.ipynb
class2/: .gitignore  main.py  pyproject.toml
